test/runtime/fail/expr/call_non_fn.hy

// expect error: Attempt to call non-function

let hello = 3
(3)(hello)
